--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,7 @@
 version: '3.1'
 
-networks:
-  frontend:
-    driver: bridge
-  backend:
-    driver: bridge
-
-volumes:
-  mongostorage:
-    driver: local
-
 services:
-
-  flask:
+  app:
     build:
       context: .
       dockerfile: Dockerfile
@@ -21,21 +10,5 @@ services:
       APP_ENV: "prod"
       APP_DEBUG: "False"
       APP_PORT: 5000
-      HARDURL_MONGODB_HOST: "mongo"
-    depends_on:
-      - mongo
-    networks:
-      - frontend
-      - backend
     ports:
       - 127.0.0.1:5000:5000
-
-  mongo:
-    image: mongo
-    restart: always
-    environment:
-      MONGODB_DATA_DIR: "/data/db"
-    volumes:
-      - mongostorage:/data/db
-    networks:
-      - backend
