--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-Flask
 coloredlogs
-pymongo
-gunicorn
 requests
-flask-mongoengine
-Flask-Security-Too
 bcrypt
 pytz
 cloudflare
+sqlalchemy
+fastapi
+uvicorn
